restorer as that as main feature...
===============================END============================================

==================================6===========================================
You can get files from the ftp now (Technically), Still the important part of 
putting the files back in the location where thay are supposed to be (OVERWRITING)
remains but ig this much is enough for this commit, adding the feature in the next 
one prolly
==================================END=========================================

===================================7==========================================
Dispatcher function added which dispatches the saves to the location where they 
should be and deletes the temporary transfer zip which previously would've remained
in the cwd (Useless lil' pieces of shit) now the interface remains.... finally
the basics of the backend are done at lucky change 7! Up next will be the interface 
of all this shit.
==================================END==========================================

===================================8===========================================
You guys must've thought I was done for today, huh? WRONG 4th major commit of today
seperated archiving functions to a different module of it's own and made misctools
module for well... misctools. AND created a sorta functional interface for noobs it's
not tested yet but I am pretty sure it will work... also now there will be a seperate
folder for every user with a different username on pc, m gonna make an override for it
next, cuz while setting up an environment for what i am assuming to be different users
might just be one and it will be a major pain in the butt if that person cant access
his/her files (The shit this program is supposed to provide), thus the override feature
is gonna be real important.

=====================================8.5==============================================
Made it such that it does not crash without a connection from config.ini